=========
Changelog
=========

0.1.2 (2012-07-10)
==================

* Added ``AliasDict.aliases_of(realkey)`` for reverse lookup of what, if any,
  aliases a given real key has.

0.2.0 (2013-03-07)
==================

* #8: Python 3 fixes, thanks to Donald Stufft.

1.0.0 (2016-02-17)
==================

* #9: Updated ``AttributeDict`` (and by extension, ``Lexicon``) so it displays
  keys in the output of ``dir()`` (since they're also attributes). Thanks to
  Hugo Oliveira for the initial patch.
* Support: Bumped to 1.0 because clearly this software is pretty stable!
  Semver: a thing. (We apparently made

2.0.0 (2021-02-XX)
==================

* Dropped support for Python <3.6
* Migrated CI to CircleCI