@@ -8,3 +8,7 @@ license_file = LICENSE
 exclude = .git,build,dist
 ignore = E124,E125,E128,E261,E301,E302,E303
 max-line-length = 79
+
+[tool:pytest]
+testpaths = tests
+python_files = *
