@@ -1,8 +1,8 @@
 from invoke import Collection
 from invocations.checks import blacken
 from invocations.packaging import release
-from invocations.testing import test
+from invocations.pytest import test, coverage
 
 
-ns = Collection(test, release, blacken)
+ns = Collection(test, coverage, release, blacken)
 ns.configure({"packaging": {"sign": True}})
